# web-framework-bench

./: .gitignore  README.md  README_zh.md
benchmark/: k6_rate_sweep.sh  k6_vus_ramp.sh
benchmark/k6/: ramp_vus.js  rate_test.js
python/fastapi/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
rust/: Cargo.toml  Dockerfile  config.toml  docker-compose.yml
rust/api/: Cargo.toml
rust/api/src/: lib.rs
rust/api/src/router/: mod.rs  user.rs
rust/core/: Cargo.toml
rust/core/src/: config.rs  lib.rs  response.rs
rust/scripts/: run_production.ps1  run_production.sh
rust/service/: Cargo.toml
rust/src/: lib.rs  main.rs
