[package]
name = "axum-server-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[workspace]
members = ["api", "core", "service"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Felix Xu"]
homepage = "https://github.com/web-framework-bech/rust"


[workspace.dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
tokio = { version = "1.48", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# HTTP dependencies
axum = { version = "0.7.4", features = ["json"] }


[dependencies]
axum = {workspace = true}
tokio = {workspace = true}
tracing-subscriber = { workspace = true }
num_cpus = "1.16"
core = {path = "core"}
rust-api = {path = "api"}

