[package]
name = "rust-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true


[dependencies]
axum = {workspace = true}
serde = { workspace = true }
core = { path = "../core" }
tower = { version = "0.5.2", features = ["util", "limit", "timeout", "load-shed"]  }
